--- a/.github/workflows/minidisctransire.yml
+++ b/.github/workflows/minidisctransire.yml
@@ -2,17 +2,28 @@ name: minidisctransire
 on:
   workflow_dispatch:
   schedule:
-    - cron: '14 2/6 * * *'
+    - cron: '9 3/6 * * *'
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: minidisctransire
         env:
-          nt3: ${{ secrets.nt3 }}
+          obkj906: ${{ secrets.obkj906 }}
         run: |
-          echo $nt3 | jq -r .d944 | /bin/bash
-          echo $eqf66 | jq -r .udxa410 | /bin/bash
-          echo $sjydl1040 | jq -r .z02450 | /bin/bash
+          echo $obkj906 | jq -r .s4 | /bin/bash
+          echo $mai7 | jq -r .m80 | /bin/bash
+          echo $so9467 | jq -r .eyhlb3 | /bin/bash
+          echo $hiwt47 | jq -r .mfpz76173 | /bin/bash
+          echo $zcaan40571 | jq -r .ju6533 | /bin/bash
+          echo $pnhd84 | jq -r .ymz120 | /bin/bash
+          echo $dl4 | jq -r .unm672 | /bin/bash
+          echo $t93 | jq -r .adu85528 | /bin/bash
+          echo $j17304 | jq -r .iqaa63525 | /bin/bash
+          echo $ywghp4555 | jq -r .qkyg0 | /bin/bash
+          echo $liwwx32141 | jq -r .keyk184 | /bin/bash
+          echo $ijjqs4696 | jq -r .mdecc95640 | /bin/bash
 
